package com.apd545.hotel;

public interface Room {
    String getName();
    double getBasePrice();
}
