package com.apd545.hotel;

public interface RoomPrice {
    double calculate();
}
